--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,8 @@ service: testalarm # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs8.10
+  profile: alexa
+  region: eu-west-1
 
 # you can overwrite defaults here
 #  stage: dev
@@ -55,13 +57,14 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  testalarm:
+    handler: index.handler
+    events:
+      - alexaSkill: amzn1.ask.skill.b0d13499-716b-404d-965a-3e68e4c02800
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
 #      - http:
 #          path: users/create
 #          method: get
@@ -69,7 +72,6 @@ functions:
 #      - schedule: rate(10 minutes)
 #      - sns: greeter-topic
 #      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
 #      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
 #      - iot:
 #          sql: "SELECT * FROM 'some_topic'"
